<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".QuizMetaDataActivity" >

        <EditText
            android:id="@+id/editTextAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/enter_author"
            android:padding="10dp" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editTextTopic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextAuthor"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/enter_topic"
            android:padding="10dp" />

        <EditText
            android:id="@+id/editTextTimeLimit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextTopic"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/enter_time"
            android:inputType="number"
            android:padding="10dp" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextTimeLimit"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/enter_pass"
            android:inputType="textPassword"
            android:padding="10dp" />

        <Button
            android:id="@+id/buttonCreateQuiz"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextPassword"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button"
            android:drawableLeft="@drawable/ic_menu_edit"
            android:drawablePadding="20dp"
            android:gravity="left|center_vertical"
            android:padding="10dp"
            android:text="@string/createquiz"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </RelativeLayout>

</ScrollView>