<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:gravity="center_vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/textViewTopic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/textViewScore"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="@string/enter_ques"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewTopicCreator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/textViewTopic"
        android:layout_below="@+id/textViewTopic"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="@string/enter_opt"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonOpen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="@android:color/transparent"
        android:drawableRight="@drawable/ic_action_next_dark"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:linksClickable="false"
        android:minWidth="48dp"
        android:padding="10dp"
        android:text="@string/blank" />

    <TextView
        android:id="@+id/textViewScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/buttonOpen"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="center"
        android:text="@string/blank"
        android:textSize="16sp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/textViewTopicCreator"
        android:layout_below="@id/textViewTopicCreator"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="16sp" />

</RelativeLayout>