<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/masterContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".QuizActivity"
    tools:ignore="ScrollViewSize" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|left"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewListQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue_diff"
            android:maxHeight="2dp"
            android:text="@string/blank"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <RelativeLayout
            android:id="@+id/realtiveLayoutBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_dark_gradient"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/textViewAtQues"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:gravity="center_vertical|center_horizontal"
                android:minWidth="40dp"
                android:padding="5dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white"
                android:textIsSelectable="true" />

            <TextView
                android:id="@+id/textViewTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:gravity="center_vertical|center_horizontal"
                android:minWidth="40dp"
                android:padding="5dp"
                android:text="@string/blank"
                android:textColor="@color/white" />

            <HorizontalScrollView
                android:id="@+id/scrollView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/bg_dark_gradient_rev"
                android:fadingEdgeLength="20dp"
                android:padding="3dp"
                android:scrollbars="none" >

                <LinearLayout
                    android:id="@+id/linearLayoutFlags"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" >
                </LinearLayout>
            </HorizontalScrollView>
        </RelativeLayout>
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout1" >

        <RelativeLayout
            android:id="@+id/relativeLayout01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/linearLayoutQuizData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearLayout1"
                android:gravity="left|right"
                android:orientation="vertical"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/textViewQuestion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/enter_ques"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <TableLayout
                    android:id="@+id/tableLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp" >

                    <TableRow
                        android:id="@+id/tr1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/textViewPassword"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/a"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <CheckBox
                            android:id="@+id/checkBox01"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/app_name"
                            android:textColor="@color/black" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/tr2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/TextView01"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/b"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <CheckBox
                            android:id="@+id/checkBox02"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/enter_opt"
                            android:textColor="@color/black" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/tr3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/TextView02"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/c"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <CheckBox
                            android:id="@+id/checkBox03"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/enter_opt"
                            android:textColor="@color/black" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/tr4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/TextView03"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/d"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <CheckBox
                            android:id="@+id/checkBox04"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/app_name"
                            android:textColor="@color/black" />
                    </TableRow>

                    <TextView
                        android:id="@+id/textViewExplanation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/blank"
                        android:textSize="16sp" />
                </TableLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutSummary"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/linearLayoutQuizData"
                android:orientation="vertical"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:padding="20dp"
                    android:text="@string/summary"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/textViewSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blank"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Button
                    android:id="@+id/buttonViewAnswers"
                    style="@style/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="@string/view_ans" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/relativeLayoutNavigationButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical|center_horizontal" >

        <Button
            android:id="@+id/ButtonFirst"
            style="@style/button_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:drawableLeft="@drawable/ic_first_light"
            android:paddingBottom="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="20dp"
            android:text="@string/blank" />

        <Button
            android:id="@+id/ButtonPrevious"
            style="@style/button_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/ButtonFirst"
            android:layout_alignParentTop="true"
            android:layout_alignTop="@id/ButtonFirst"
            android:layout_toRightOf="@+id/ButtonFirst"
            android:drawableLeft="@drawable/ic_action_prev_light"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/blank" />

        <Button
            android:id="@+id/ButtonLast"
            style="@style/button_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/ButtonFirst"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/ButtonFirst"
            android:drawableRight="@drawable/ic_last_light"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/blank" />

        <Button
            android:id="@+id/ButtonNext"
            style="@style/button_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/ButtonFirst"
            android:layout_alignTop="@id/ButtonFirst"
            android:layout_toLeftOf="@id/ButtonLast"
            android:drawableRight="@drawable/ic_action_next_light"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/blank" />

        <Button
            android:id="@+id/ButtonSubmit"
            style="@style/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/ButtonFirst"
            android:layout_alignTop="@id/ButtonFirst"
            android:layout_toLeftOf="@id/ButtonNext"
            android:layout_toRightOf="@id/ButtonPrevious"
            android:text="@string/submit" />
    </RelativeLayout>

</RelativeLayout>