<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/newParentContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <ScrollView
        android:id="@+id/parentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".CreateQuizActivity" >

            <EditText
                android:id="@+id/editTextQues"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/enter_ques"
                android:inputType="textMultiLine"
                android:paddingBottom="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:paddingTop="20dp" >

                <requestFocus />
            </EditText>

            <TableLayout
                android:id="@+id/tableLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/editTextQues"
                android:padding="5dp" >

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:baselineAligned="false"
                    android:gravity="center_vertical" >

                    <CheckBox
                        android:id="@+id/checkBox1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp" />

                    <EditText
                        android:id="@+id/editTextOpt1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:ems="10"
                        android:hint="@string/enter_opt"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:singleLine="true" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical" >

                    <CheckBox
                        android:id="@+id/checkBox2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp" />

                    <EditText
                        android:id="@+id/editTextOpt2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:ems="10"
                        android:hint="@string/enter_opt"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:singleLine="true" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical" >

                    <CheckBox
                        android:id="@+id/checkBox3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp" />

                    <EditText
                        android:id="@+id/editTextOpt3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:ems="10"
                        android:hint="@string/enter_opt"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:singleLine="true" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical" >

                    <CheckBox
                        android:id="@+id/checkBox4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp" />

                    <EditText
                        android:id="@+id/editTextOpt4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:ems="10"
                        android:hint="@string/enter_opt"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:singleLine="true" />
                </TableRow>

                <EditText
                    android:id="@+id/editTextNotes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/enter_notes"
                    android:inputType="textPostalAddress"
                    android:paddingBottom="20dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="10dp"
                    android:paddingTop="20dp" />
            </TableLayout>

            <Button
                android:id="@+id/button_add_ques"
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/tableLayout1"
                android:layout_margin="10dp"
                android:drawableLeft="@drawable/ic_menu_add"
                android:drawablePadding="20dp"
                android:gravity="left|center_vertical"
                android:padding="10dp"
                android:text="@string/add_ques" />

            <Button
                android:id="@+id/button_create_quiz"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/button_add_ques"
                android:layout_alignRight="@+id/button_add_ques"
                android:layout_below="@+id/button_add_ques"
                android:drawableLeft="@drawable/ic_menu_save"
                android:drawablePadding="20dp"
                android:gravity="left|center_vertical"
                android:padding="10dp"
                android:text="@string/quiz_completed" />

            <TextView
                android:id="@+id/textViewQuestions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/button_create_quiz"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:text="@string/blank"
                android:visibility="gone" />
        </RelativeLayout>
    </ScrollView>

    <ListView
        android:id="@+id/listViewQuestions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:scrollbars="vertical"
        android:visibility="gone"
        tools:ignore="NestedScrolling" >

    </ListView>

</RelativeLayout>